# LcdImageMapper

./: CMakeLists.txt  README.md  imagetool.py  requirements.txt
docs/: knowledge-guide.md  technical.md  usage.md
src/: MainWindow.cpp  MainWindow.h  main.cpp  stb_image.h
